--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -115,23 +115,53 @@ Three brands of batteries are under study. It is suspected that the lives (in we
 ```{r include=FALSE}
 library(readxl)
 library(tidyverse)
+require(ggplot2)
+library(car)
+
+library(vcd)
+library(vcdExtra)
 ```
   (a) Are the lives of these brands of batteries different?
-  (b) Analyze the residuals from this experiment.
-  (c) Construct a 95 percent confidence interval estimate on the mean life of battery brand 2. Construct a 99 percent confidence interval estimate on the mean difference between the lives of battery brands 2 and 3.
-  (d) Which brand would you select for use? If the manufacturer will replace without charge any battery that fails in less than 85 weeks, what percentage would the company expect to replace?
   
 ```{r echo=T}
 table_battery <- read_xlsx("Exercise3_26.xlsx")
-t.test(table_cellphone$TwentySeconds, table_cellphone$TenSeconds, paired = T,var.equal=T, alternative="greater", mu = 0, conf.level= 0.95)
+modle_battery <- lm(Life~Brand, data=table_battery)
+
+anova(modle_battery)
+summary(modle_battery)
+
+summary(aov(Life ~ Brand, data = table_battery))
 
 ```
-
-
+  
+  (b) Analyze the residuals from this experiment.
 
 ```{r echo=T}
 
-t.test(score~cool_down_time, data=gather(table_cellphone,key=cool_down_time,value=score), paired = T,var.equal=T, alternative="two.sided", mu = 0, conf.level= 0.95)
+plot(modle_battery)
+
+```
+  
+  (c) Construct a 95 percent confidence interval estimate on the mean life of battery brand 2. Construct a 99 percent confidence interval estimate on the mean difference between the lives of battery brands 2 and 3.
+  
+```{r echo=T}
+
+confint(modle_battery, level = 0.95)
+``` 
+  
+  (d) Which brand would you select for use? If the manufacturer will replace without charge any battery that fails in less than 85 weeks, what percentage would the company expect to replace?
+
+
+```{r echo=T}
+ggplot(table_battery, aes(x = Brand, y = Life)) + geom_boxplot()
+
+prop.table(xtabs(~Life+Brand,data=table_battery,subset=!is.na(Brand), drop.unused.levels=T), 2)
+
+chisq.test(xtabs(~Brand+Life,data=table_battery,subset=!is.na(Life)))
+
+
+#running Leven's Equality of Variance
+leveneTest(Life ~ Brand, data = table_battery,center = "mean")
 
 ```
 
@@ -140,13 +170,18 @@ t.test(score~cool_down_time, data=gather(table_cellphone,key=cool_down_time,valu
 The response time in milliseconds was determined for three different types of circuits that could be used in an
 automatic valve shutoff mechanism. The results from a completely randomized experiment are shown in the following table:
 
+  (a) Test the hypothesis that the three circuit types have the same response time. Use 𝛼 = 0.01.
+  
 ```{r echo=T}
 table_circuit <- read_xlsx("Exercise3_22.xlsx")
-t.test(table_circuit$TwentySeconds, table_cellphone$TenSeconds, paired = T,var.equal=T, alternative="greater", mu = 0, conf.level= 0.95)
 
+modle_circuit <- lm(Respone~Type, data=table_circuit)
+anova(modle_circuit)
+summary(modle_circuit)
+
+GKgamma(xtabs(~Respone + Type,data=table_circuit,subset=!is.na(Type), drop.unused.levels=T))
 ```
-
-  (a) Test the hypothesis that the three circuit types have the same response time. Use 𝛼 = 0.01.
+  
   (b) Use Tukey’s test to compare pairs of treatment means. Use 𝛼 = 0.01.
   (d) Construct a set of orthogonal contrasts, assuming that at the outset of the experiment you suspected the
 response time of circuit type 2 to be different from the other two.
