--- a/static/stat565/temp_stat565.Rmd
+++ b/static/stat565/temp_stat565.Rmd
@@ -17,11 +17,11 @@ In a greenhouse experiment, 5 types of light were used: natural, white, green, b
 
 A partial ANOVA table was found to be
 
-|Source of Variance|Sum of Squares (SS)|Degrees of Freedom (df)|Mean Squares (MS)|F test statistic $F_0$|
+|Source of Variance|Sum of Squares(SS)|Degrees of Freedom(df)|Mean Squares(MS)|F test statistic|
 | ---  | ---  | --- | --- | --- |
-|Treatment(Between or Model)|9.95904|4 | | |
-|Error(Within)              |1.950  |35| |   
-|Total                      |       |39|
+|Treatment(Between or Model)|9.95904 |4 |2.48976|44.688|
+|Error(Within)              |1.950   |35|0.05571429|   
+|Total                      |11.90904      |39|
 
   (a) Complete the ANOVA table assuming the one-way fixed effects ANOVA model. Show main steps of your work. Keep 3 decimal places in $SS_{Trt}$
 
@@ -36,7 +36,7 @@ $$MS_{E}=\frac{SS_{E}}{N-a}=\frac{1.950}{35}=0.05571429$$
 
 $$F_{0}=\frac{MS_{Trt}}{MS_{E}}=\frac{2.48976}{0.05571429}=44.688$$
 
-```{r}
+```{r, collapse=TRUE}
 bar_y_all <- (4.09+4.30+3.55+3.01+3.19)/5
 bar_y_all
 ss_trt <- 8*((4.09-bar_y_all)^2+(4.30-bar_y_all)^2+(3.55-bar_y_all)^2+(3.01-bar_y_all)^2+(3.19-bar_y_all)^2)
@@ -49,7 +49,7 @@ ss_trt
 
 $$se(\bar y _{i.}-\bar y_{j.})=\sqrt{\frac{2MSE}n}=\sqrt{\frac{2\times0.05571429}8}=0.1180194$$
 
-```{r}
+```{r, collapse=TRUE}
 
 sqrt(2*1.950/{8*35})
 
@@ -70,39 +70,82 @@ By the assumption for linear combination, $\mu_i$ is a constant. $Var(n_i\mu_i)=
 
 $$=\sum^{a}_{i=1}\left[c_i^2(0+\sum^{n_i}_{j=1}Var(ε_{ij}))\right]=\sum^{a}_{i=1}\left[c_i^2n_i\sigma^2\right]=σ^2\sum^{a}_{i=1}n_ic_i^2$$
 
-$Var(\mu_i+ε_{ij})=Var(\mu_i)+Var(ε_{ij})$
-
-
-By the assumption of contrast constants, $\sum^{a}_{i=1}c_i=0$
-
----
+ ---
 
 ### Problem 3
 
-Let $y_{ij}=\mu+\tau_{i}+\varepsilon_{ij}, ε_ij\sim iid\ N(0,σ^2)$,for $i=1,2,…,a;\ j=1,2,…,n$;$\sum_{i=1}^a\tau_i=0$
+Let $y_{ij}=\mu+\tau_{i}+\varepsilon_{ij}, ε_{ij}\sim iid\ N(0,σ^2)$,for $i=1,2,…,a;\ j=1,2,…,n$;$\sum_{i=1}^a\tau_i=0$, $\bar y_{i.}=\frac1n \sum_{j=1}^ny_{ij}$, $\bar y_{i.}\sim iid\ N(\mu+\tau_i,\frac{\sigma^2}n)$
 
-$\bar y_{i.}=\frac1n \sum_{i=1}^ny_{ij}$, $\bar y_{i.}\sim iid\ N(\mu+\tau_i,\frac{\sigma^2}n)$
+$Var(\mu_i+ε_{ij})=Var(\mu_i)+Var(ε_{ij})$
+By the assumption of contrast constants, $\sum^{a}_{i=1}c_i=0$
+
+ ---
 
   (a) Using ONLY the above given information and properties of expected value of a function of random variables, derive (DO NOT use any other distribution properties)
 
-$E(y_{ij}-\bar y_{i.}=$
-$Var(y_{ij}-\bar y_{i.}=$
+$$E(y_{ij}-\bar y_{i.})=E[\mu+\tau_{i}+\varepsilon_{ij}-\frac1n \sum_{j=1}^n(\mu+\tau_{i}+\varepsilon_{ij})]$$
 
-  (b) Using your answers in part (a) and shortcut formula for variance ($Var(X)=E(X^2)-E(X)^2)$, find 
-$E[(y_{ij}-y_{i.})^2]=$
+For a fixed effects model, $\mu$ is a constant and $\tau_i$ is a constant of the $i^{th}$ treatment, then
 
-  (c) Let a=3 treatments in the above model and the following linear functions of $\mu_i=\mu+\tao_i$ are tested.
-$\mu_1=\mu_2$, $\frac{\mu_1+\mu_2}{2}=\mu_3$.
+$$=E[\mu+\tau_{i}-\mu-\tau_{i}+\varepsilon_{ij}-\frac1n \sum_{j=1}^n{\varepsilon_{ij}}]=E[\varepsilon_{ij}-\frac1n \sum_{j=1}^n\varepsilon_{ij}]$$
 
-  (i) Prove that each of these is a contrast and they are orthogonal contrasts.
-    
+For $ε_{ij}\sim iid\ N(0,σ^2)$, $E[\varepsilon_{ij}]=0$, then
+
+$$E(y_{ij}-\bar y_{i.})=E[\varepsilon_{ij}]-\frac1n \sum_{j=1}^n{E[\varepsilon_{ij}]}=0$$
+
+
+$$Var(y_{ij}-\bar y_{i.})=Var[\mu+\tau_{i}+\varepsilon_{ij}-\frac1n \sum_{j=1}^n{(\mu+\tau_{i}+\varepsilon_{ij})}]=Var[\varepsilon_{ij}-\frac1n \sum_{j=1}^n\varepsilon_{ij}]$$
+
+For $ε_{ij}\sim iid\ N(0,σ^2)$, $Var[\varepsilon_{ij}]=\sigma^2$, then
+
+$$Var(y_{ij}-\bar y_{i.})=Var[\varepsilon_{ij}-\frac1n \sum_{j=1}^n\varepsilon_{ij}]=Var[\varepsilon_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[\varepsilon_{ij}]-2Cov(\varepsilon_{ij},\sum_{j=1}^n\varepsilon_{ij})$$
+
+$$=\sigma^2+\frac{\sigma^2}n+0=\frac{n+1}n\sigma^2$$
+
+  (b) Using your answers in part (a) and shortcut formula for variance ($Var(X)=E(X^2)-E(X)^2$), find 
+$E[(y_{ij}-\bar y_{i.})^2]=$
+
+For $Var[y_{ij}-\bar y_{i.}]=E[(y_{ij}-\bar y_{i.})^2]-E[y_{ij}-\bar y_{i.}]^2$, then
+
+$$E[(y_{ij}-\bar y_{i.})^2]=Var[y_{ij}-\bar y_{i.}]+E[y_{ij}-\bar y_{i.}]^2=\frac{n+1}n\sigma^2$$
+
+
+  (c) Let $a=3$ treatments in the above model and the following linear functions of $\mu_i=\mu+\tao_i$ are tested. $\mu_1=\mu_2$, $\frac{\mu_1+\mu_2}{2}=\mu_3$.
+
+   (i) Prove that each of these is a contrast and they are orthogonal contrasts.
+
+For $a=3,\mu_1=\mu_2$, $c_1=1,c_2=-1,c_3=0$
+
+$$\sum_{i=1}^3c_i=1-1+0=0$$
+
+For $\frac{\mu_1+\mu_2}2=\mu_3$, $d_1=1,d_2=1,d_3=-2$
+
+$$\sum_{i=1}^3d_i=1+1-2=0$$
+
+$$\sum_{i=1}^3c_id_i=1*1+(-1)*1+(-2)*0=0$$
+
+Therefore, they are orthogonal contrasts.
+
   (ii) Write Sum of Squares for each contrast $SS_c$ in terms of $y_{1.},y_{2.},y_{3.}$.
+    
+$$SS_c=\frac{C^2}{\frac1n\sum_{i=1}^ac_i^2}=\frac{(\sum_{i=1}^ac_i\bar y_{i.})^2}{\frac1n\sum_{i=1}^ac_i^2}=\begin{cases}\frac{(\bar y_{1.}-\bar y_{2.})^2}{\frac{1+1}n}
+&for\ \mu_1=\mu_2\\
+\frac{(\bar y_{1.}+\bar y_{2.}-2\bar y_{3.})^2}{\frac{1+1+4}n}
+&for\ \frac{\mu_1+\mu_2}{2}=\mu_3
+\end{cases}$$
     
   (iii) Add the two $SS_c$ you found in part (ii) and simplify (expand and bring similar terms together).
 
+$$SS_c=\frac{n(\bar y_{1.}-\bar y_{2.})^2}{2}+\frac{n(\bar y_{1.}+\bar y_{2.}-2\bar y_{3.})^2}{6}=\frac{n}6(4\bar y_{1.}^2+4\bar y_{2.}^2+4\bar y_{3.}^2-4\bar y_{1.}\bar y_{2.}-4\bar y_{2.}\bar y_{3.}-4\bar y_{1.}\bar y_{3.})$$
+
 Then expand and simplify the $SS_{Trt}$ given below to prove that it is equivalent to the sum of two $SS_c$ you found earlier.
 
-$$SS_{Trt}=n\sum_{i=1}^3(\bar y_{i.}-\bar y_{..})^2 $$
+$$SS_{Trt}=n\sum_{i=1}^3(\bar y_{i.}-\bar y_{..})^2=\frac{n}9\sum_{i=1}^3(3\bar y_{i.}-\bar y_{1.}-\bar y_{2.}-\bar y_{3.})^2=\frac{n}9[(2\bar y_{1.}-\bar y_{2.}-\bar y_{3.})^2+(2\bar y_{2.}-\bar y_{1.}-\bar y_{3.})^2+(2\bar y_{3.}-\bar y_{1.}-\bar y_{2.})^2]$$
+$$=\frac{n}9[6\bar y_{1.}^2+6\bar y_{2.}^2+6\bar y_{3.}^2-6\bar y_{1.}\bar y_{2.}-6\bar y_{2.}\bar y_{3.}-6\bar y_{1.}\bar y_{3.}]$$
+
+
+
+$$\therefore SS_c=SS_{Trt}=\frac{2n}3(\bar y_{1.}^2+\bar y_{2.}^2+\bar y_{3.}^2-\bar y_{1.}\bar y_{2.}-\bar y_{2.}\bar y_{3.}-\bar y_{1.}\bar y_{3.})$$
 
 
 ### Problem 4 (3.26/30)
@@ -199,6 +242,8 @@ plot(model_circuit)
   
   (d) Construct a set of orthogonal contrasts, assuming that at the outset of the experiment you suspected the response time of circuit type 2 to be different from the other two.
 
+$$\begin{cases}H_0:\mu_1-2\mu_2+\mu_3=0\\H_1:\mu_1-2\mu_2+\mu_3\neq0\end{cases}$$
+$$C_1:y_1-2y_2+y_3=54-2(111)+42=-126$$
   (e) If you were the design engineer and you wished to minimize the response time, which circuit type would you select?
   
   (f) Analyze the residuals from this experiment. Are the basic analysis of variance assumptions satisfied?
@@ -213,7 +258,18 @@ plot(model_circuit)
   (3.49/57) Consider the data shown in Problem 5.
 
   (a) Write out the least squares normal equations for this problem and solve them for $\hat\mu$ and $\hat\tau_i$, using the usual constraint ($\sum^3_{i=1} \hat\tau_i=0$). Estimate $\tau_1-\tau_2$
-  
+
+$$\begin{matrix}
+15\hat\mu&+5\hat\tau_1&+5\hat\tau_2&+5\hat\tau_3&=207\\
+5\hat\mu&+5\hat\tau_1& & &=54\\
+5\hat\mu& &+5\hat\tau_2& &=111\\
+15\hat\mu& & &+5\hat\tau_3&=42
+\end{matrix}$$
+
+For $\sum^3_{i=1} \hat\tau_i=0$, $\hat\mu=13.80,\hat\tau_1=-3.00,\hat\tau_2=8.40,\hat\tau_3=-5.40$
+
+$\hat\tau_1-\hat\tau_2=-3.00-8.40=-11.40$
+
   (b) Solve the equations in (a) using the constraint $\hat\tau_3=0$. Are the estimator $\hat\tau_i$ and $\hat\mu$ the same as you found in (a)? Why? Now estimate $\tau_1-\tau_2$ and compare your answer with that for (a). What statement can you make about estimating contrasts in the $\tau_i$
   
   (c) Estimate $\mu+\tau_1$, $2\tau_1-\tau_2-\tau_3$, $\mu+\tau_1+\tau_2$ and using the two solutions to the normal equations. Compare the results obtained in each case.
