--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -367,45 +367,34 @@ $$\therefore f_{Y_1..Y_n}(y_1,..,y_n)=\begin{cases}iay_i^{ia−1}&0<y_i<1,i=1,2,
 
 **5.35** Stirling's Formula (derived in Exercise 1.28), which gives an approximation for factorials, can be easily derived using the CLT.
 
- (a). Argue that, if Xi '" exponential ( I ) , i = 1 , 2, . . ., all independent, then for every x, 
+ (a). Argue that, if $X_i\sim exponential(I),i=1,2,..$, all independent, then for every x, 
  
- P (Xn - 1 )
-I /Vn
-:::; x ...... P (Z :::; x) ,
+$P\left(\frac{\bar X_n-1}{\frac1{\sqrt n}}\le x\right)\rightarrow P(Z\le x)$ where Z is a standard normal random variable.
 
-where Z is a standard normal random variable.
 
+ ---
+ 
  (b). Show that differentiating both sides of the approximation in part (a) suggests
-
-Vn
-(xvn +n) ", - l e -C:z:vn+ n)  _1_ e -:Z:2/2 r(n) y'2;
-
-and that x = 0 gives Stirling's Formula.
+$\frac{\sqrt n}{\Gamma n})(x\sqrt n+n)^{n-1} e^{-(x\sqrt n+n)}\approx \frac1{\sqrt{2\pi}}e^{-\frac{x^2}2}$ and that x = 0 gives Stirling's Formula.
 
  ---
 
 **5.39** This exercise, and the two following, will look at some o f the mathematical details of convergence.
 
- (a). Prove Theorem 5.5.4. (Hint: Since h is continuous, given e: > 0 we can find a 6
-such that Ih(xn) - h(x)1 < e: whenever Ix" - xl < 6. Translate this into probability
-statements. )
+ (a). Prove Theorem 5.5.4. (Hint: Since h is continuous, given $\varepsilon>0$ we can find a $\delta>0$such that $|h(x_n)-h(x)|<\varepsilon$: whenever $|X_n-X|<\delta$. Translate this into probabilitystatements. )
 
- (b). In Example 5.5.B, find a subsequence of the XiS that converges almost surely, that is, that converges p ointwise.
+ (b). In Example 5.5.B, find a subsequence of the $X_i$S that converges almost surely, that is, that converges p ointwise.
  
  ---
 
 **5.41** Prove Theorem 5.5.13; that is, show that
 
-P (IX" - J.LI > e) -t 0 for every e <=> P (X < x) -t {O f x < J.L
-n- 1 1f x  J.L.
+$$\forall\varepsilon>0, P(|X_n-\mu|>\varepsilon)\to0\iff P(X_n\le x)\to\begin{cases}0&x<\mu\\1&x\ge\mu\end{cases}$$
 
- (a). Set e: = Ix - J.LI and show that if x > J.L, then P(Xn :0:; x)  P(I Xn - J.LI :0:; e), while
-if x < J.L, then P(X" :0:; x) :0:; P ( I X" - J.L I e) . Deduce the => implication.
+ (a). Set $\varepsilon=|x-\mu|$ and show that if $x>\mu$, then $P(X_n\le x)\ge P(|X_n-\mu|\le\varepsilon)$, while if $x<\mu$, then $P(X_n\le x)\le P(|X_n-\mu|\ge\varepsilon)$. Deduce the $\implies$ implication.
 
 
- (b). Use the fact that {x : Ix J.LI > e:} ::: {x : x J.L < -e:} U {x : x - J.L > e} to deduce the *" implication.
- 
-(See Billingsley 1995, Section 25, for a detailed treatment of the above results.)
+ (b). Use the fact that $\{x: X-\mu>\varepsilon\}=\{x:x-\mu<-\varepsilon\}\cup\{x:x-\mu >\varepsilon\}$ to deduce the $\Leftarrow$ implication.(See Billingsley 1995, Section 25, for a detailed treatment of the above results.)
  
 ## HW5
 
