--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -65,7 +65,7 @@ $MS_{Trt}=\frac{SS_{Trt}}{a-1}=\frac{1}4=$; $MS_{E}=\frac{SS_{E}}{N-a}=\frac{1}{
  (2) If the diet effect was fixed, then
   (a) Write the overall hypotheses for this test.
   (b) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
-  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute ($\widehat{Var(\bar y_{i.})}$̂).
+  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute ($\widehat{Var(\bar y_{i.})}$)
   (d) If you were to compute 95% confidence interval for the true mean of each treatment, provide the name and its parameter value(s) of the probability distribution.
   (e) Write a contrast to test the average fatty acid for diets A, B is same as average fatty acid for diets C, D.
   (f) Write the probability distribution along with its parameter(s) used to test the above contrast.
@@ -74,7 +74,7 @@ $MS_{Trt}=\frac{SS_{Trt}}{a-1}=\frac{1}4=$; $MS_{E}=\frac{SS_{E}}{N-a}=\frac{1}{
  (3) If the diet effect was random, then
   (a) Write the overall hypotheses for this test.
   (b) Write the name of probability distribution along with its parameter value(s) used to test the above overall hypotheses.
-  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute $\widehat{Var(\bar y_{i.})}$̂).
+  (c) Compute the estimated variance of observed average fatty acid amount for each diet. (that is, compute $\widehat{Var(\bar y_{i.})}$).
 
  ---
 
@@ -111,8 +111,8 @@ Note: For the given model in each of the following four problems, be able to der
 
 |$y_{ij}$|$i$|$j$|$ε_{ij}$|$\tau_i$|$\beta_j$|$\bar y_{i.}$|$\bar y_{.j}$|$\bar y_{..}$|
 |   ---  |---|---|   ---  | ---    | ---         | ---         |
-|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$| |$\frac1n\sum_{j=1}^ny_{ij}$||$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
-|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sim iid\ N(0,σ_{\tau}^2)$| |$\frac1n\sum_{j=1}^ny_{ij}$||$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
+|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
+|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sim iid\ N(0,σ_{\tau}^2)$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
 |$\mu+\tau_{i}+\beta_j+ε_{ij}|$1,2,…,a$|$1,2,…,b$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sum_{j=1}^b\beta_j=0$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
 |$\mu+\tau_{i}+\beta_j+ε_{ij}|$1,2,…,a$|$1,2,…,b$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sim iid\ N(0,σ_{\beta}^2)$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
 
