--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -111,10 +111,10 @@ Note: For the given model in each of the following four problems, be able to der
 
 |$y_{ij}$|$i$|$j$|$ε_{ij}$|$\tau_i$|$\beta_j$|$\bar y_{i.}$|$\bar y_{.j}$|$\bar y_{..}$|
 |   ---  |---|---|   ---  | ---    | ---     | ---         | ---         | ---         |
-|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
-|$\mu+\tau_{i}+ε_{ij}|$1,2,…,a$|$1,2,…,n$|\sim iid\ N(0,σ^2)$|$\sim iid\ N(0,σ_{\tau}^2)$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
-|$\mu+\tau_{i}+\beta_j+ε_{ij}|$1,2,…,a$|$1,2,…,b$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sum_{j=1}^b\beta_j=0$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
-|$\mu+\tau_{i}+\beta_j+ε_{ij}|$1,2,…,a$|$1,2,…,b$|\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sim iid\ N(0,σ_{\beta}^2)$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
+|$\mu+\tau_{i}+ε_{ij}$|$1,2,…,a$|$1,2,…,n$|$\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
+|$\mu+\tau_{i}+ε_{ij}$|$1,2,…,a$|$1,2,…,n$|$\sim iid\ N(0,σ^2)$|$\sim iid\ N(0,σ_{\tau}^2)$|.|$\frac1n\sum_{j=1}^ny_{ij}$|.|$\frac1{an}\sum_{i=1}^a\sum_{j=1}^ny_{ij}$|
+|$\mu+\tau_{i}+\beta_j+ε_{ij}$|$1,2,…,a$|$1,2,…,b$|$\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sum_{j=1}^b\beta_j=0$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
+|$\mu+\tau_{i}+\beta_j+ε_{ij}$|$1,2,…,a$|$1,2,…,b$|$\sim iid\ N(0,σ^2)$|$\sum_{i=1}^a\tau_i=0$|$\sim iid\ N(0,σ_{\beta}^2)$|$\frac1b\sum_{j=1}^by_{ij}$|$\frac1a\sum_{i=1}^ay_{ij}$|$\frac1{ab}\sum_{i=1}^a\sum_{j=1}^by_{ij}$|
 
 
 
